# TaskFlow

./: .$OO Design.drawio.dtmp  CMakeLists.txt  OO Design.drawio  README.md
Design/: OO Design.drawio
include/: CompletedTask.h  IScheduler.h  Priority.h  PriorityScheduler.h  ScheduleResult.h  SchedulerContext.h  SchedulerFactory.h  SjfScheduler.h  Task.h  Time.h  testData.h
src/: PriorityScheduler.cpp  SchedulerContext.cpp  SchedulerFactory.cpp  SjfScheduler.cpp  main.cpp
